[gd_scene load_steps=15 format=2]

[ext_resource path="res://Sprites/karim_dead.png" type="Texture" id=1]
[ext_resource path="res://Karim.gd" type="Script" id=2]
[ext_resource path="res://Sprites/karim_hurt.png" type="Texture" id=3]
[ext_resource path="res://Sprites/karim_walk.png" type="Texture" id=4]
[ext_resource path="res://Sprites/karim_idle.png" type="Texture" id=5]
[ext_resource path="res://Sprites/karim_walk1.png" type="Texture" id=6]
[ext_resource path="res://Sprites/karim_attack.png" type="Texture" id=7]
[ext_resource path="res://Sound/karim_death.wav" type="AudioStream" id=8]
[ext_resource path="res://Sound/karim_hurt.wav" type="AudioStream" id=9]
[ext_resource path="res://Sound/throwing.wav" type="AudioStream" id=10]
[ext_resource path="res://Sound/menu.wav" type="AudioStream" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "idle",
"speed": 0.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 6 ) ],
"loop": true,
"name": "walk",
"speed": 4.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 29.4773, 81.892 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 336.813, 192 )

[node name="Karim" type="KinematicBody2D" groups=[
"Ennemy",
]]
position = Vector2( -1, 0 )
collision_layer = 33
collision_mask = 33
script = ExtResource( 2 )

[node name="karim" type="AnimatedSprite" parent="."]
scale = Vector2( 1.7, 1.7 )
frames = SubResource( 1 )
animation = "attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4.47731, 1.89201 )
shape = SubResource( 2 )

[node name="Cooldown" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.187286, 0 )
shape = SubResource( 3 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.415955, 0 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -383, -320 )

[node name="PosShootRight" type="Position2D" parent="."]
position = Vector2( 81, -40 )

[node name="PosShootLeft" type="Position2D" parent="."]
position = Vector2( -79, -40 )

[node name="AudioHurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="AudioDeath" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="AudioThrow" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )

[node name="AudioBop" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
